--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "ahooks": "^3.7.4",
     "axios": "^1.3.0",
     "eslint": "8.22.0",
     "lodash.identity": "^3.0.0",
