--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.191",
     "@types/module-alias": "^2.0.1",
+    "classnames": "^2.3.2",
     "prettier": "2.8.3",
     "react-content-loader": "^6.2.0",
     "sass": "^1.57.1"
