--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "pizza-time",
-  "version": "0.1.0",
+  "version": "1",
   "private": true,
+  "homepage": "https://kira-ru.github.io/pizza-time",
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
@@ -12,8 +17,9 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "ahooks": "^3.7.4",
-    "axios": "^1.3.0",
+    "axios": "^1.2.3",
     "eslint": "8.22.0",
+    "history": "^5.3.0",
     "lodash.identity": "^3.0.0",
     "lodash.pickby": "^4.6.0",
     "module-alias": "^2.2.2",
@@ -32,7 +38,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -53,9 +60,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/lodash": "^4.14.191",
     "@types/module-alias": "^2.0.1",
     "classnames": "^2.3.2",
+    "gh-pages": "^5.0.0",
     "prettier": "2.8.3",
     "react-content-loader": "^6.2.0",
     "sass": "^1.57.1"
